2003-12-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericParam): New internal class;
	derives from MonoType.	

2003-12-08  Patrik Torstensson <p@rxc.se>

	* Binder.cs: Added internal helpers to get derived level and select the 
	most derived methodbase (used in GetMethodImpl)

2003-11-25  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (LoadWithPartialName): Return null instead of throwing
	an exception to match MS behavior.

2003-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* MonoMethod.cs: Add missing constructor.

2003-11-21  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs (Invoke): Make this virtual under NET 1.2.

2003-11-16  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.inflate): Call
	`parent.inflate (parent,...)' instead of
	`parent.inflate (reflected,...)'.

2003-11-16  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (InternalGetAssemblyName): New icall.

	* AssemblyName.cs (GetAssemblyName): Implement this without loading
	the assembly in question. Fixes #51035.

2003-11-14  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst): Added
	`MonoGenericInst[] interfaces' field.  This is only used for
	interface types.
	(MonoGenericInst.inflate): If we're an interface type, add the
	methods from all interfaces we inherit.

2003-11-14  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyNameFlags.cs MethodAttributes.cs: Add new enumerated values 
	from NET 1.1.
	
	* *.cs: Add missing attributes.

2003-11-11  Todd Berman  <tberman@gentoo.org>

	* AssemblyName.cs (FullName): Fixed to include a proper PublicKeyToken.

2003-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* MonoMethod.cs: Implement CallingConvention member.

2003-11-10  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (InternalGetType): Add a 'module' argument so this
	method can be used from Module as well.

	* Module.cs (GetType): Implement.

	* Module.cs (GetTypes): Implement.
